update setenv template