@@ -3,6 +3,7 @@
 
 export JAVA_OPTS="$JAVA_OPTS -Xms512m"
 export JAVA_OPTS="$JAVA_OPTS -Xmx512m"
+export JAVA_OPTS="$JAVA_OPTS -Xmn256m"
 
 # The hotspot server JVM has specific code-path optimizations
 # which yield an approximate 10% gain over the client version.
@@ -24,7 +25,7 @@ export JAVA_OPTS="$JAVA_OPTS -XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabl
 # export JAVA_OPTS="$JAVA_OPTS -XX:+HeapDumpOnOutOfMemoryError"
 # export JAVA_OPTS="$JAVA_OPTS -XX:HeapDumpPath=\${LOGS_DIR}"
 # export JAVA_OPTS="$JAVA_OPTS -XX:+PrintGCDetails"
-# export JAVA_OPTS="$JAVA_OPTS -XX:+PrintGCTimeStamps"
+# export JAVA_OPTS="$JAVA_OPTS -XX:+PrintGCDateStamps"
 # export JAVA_OPTS="$JAVA_OPTS -Xloggc:\${LOGS_DIR}/dump_head.txt"
 
 # only for jdk 1.7
